@@ -21,7 +21,8 @@ def _assert_properly_configured():
     """Make sure that the authentication backend is properly configured.
     """
     if not hasattr(client, 'auth'):
-        raise ImproperlyConfigured("If using the Slumber client's "
+        raise ImproperlyConfigured(
+            "If using the Slumber client's "
             "authentication backend then you must also use the full "
             "service based Slumber configuration and include a service "
             "called 'auth' which points to the service which will "
