@@ -1,3 +1,6 @@
+2013-07-11  Kirit Saelensminde  <kirit@felspar.com>
+ UTF-7 encode the user name in the Authorization header and in the X-FOST-User header.
+
 2013-06-04  Kirit Saelensminde  <kirit@felspar.com>
  Fixed up some NULL handling problems for the database fields on RemoteForeignKey thanks to Jsaytoe.
 
